--- a/css/style.less
+++ b/css/style.less
@@ -1,2 +1,6 @@
-*{margin: 0; padding: 0; font: 12px 'Microsoft Yahei'; outline: 0;}
+*{margin: 0; padding: 0; font: 12px 'Microsoft Yahei'; outline: 0; color: #333;}
 body{background-color: #eee;}
+.chart{margin-bottom: 30px; width: 100%; height: 200px;}
+h1{font-size: 20px; padding: 0 4%; text-align: center; margin: 40px 0;
+	span{color: #e63030; font-size: 20px; text-shadow: 0 0;}
+}
