为首页增加背景

--- a/projects/tt2/src/ts/containers/Home/index.module.scss
+++ b/projects/tt2/src/ts/containers/Home/index.module.scss
@@ -1,8 +1,11 @@
 .content {
-  padding: .4rem;
+  height: 100%;
+  padding: 0 .4rem;
+  overflow: hidden;
 }
 
 .title {
+  margin-top: .4rem;
   font-size: .4rem;
   font-weight: bold;
 }
