--- a/projects/optimizer/src/App/index.module.scss
+++ b/projects/optimizer/src/App/index.module.scss
@@ -9,6 +9,7 @@
 
   &.light {
     background-color: $bg-light;
+    color: $font-light;
   }
 }
 
@@ -36,6 +37,7 @@
   padding: 3px 5px;
   font-size: 14px;
   background-color: #41754f;
+  color: #fff;
   border-radius: 4px;
   margin-left: 7px;
   vertical-align: middle;
