--- a/projects/optimizer/src/index.scss
+++ b/projects/optimizer/src/index.scss
@@ -1,6 +1,6 @@
 // 颜色设置
 $bg-dark: #343a40; // 深色背景
-$bg-light: #f8f9fa; // 浅色背景
+$bg-light: #fff; // 浅色背景
 $font-dark: #fff; // 深色字体
 $font-light: #333; //浅色字体
 
