--- a/projects/optimizer/src/App/index.module.scss
+++ b/projects/optimizer/src/App/index.module.scss
@@ -20,7 +20,8 @@
   left: 15px;
   right: 15px;
   height: 80px;
-  border-bottom: 1px solid #6c757d;
+  border-bottom: 1px solid #ccc;
+  background-color: $bg-light;
 }
 
 .tt2Title {
