--- a/projects/optimizer/src/Components/SkillTree/index.module.scss
+++ b/projects/optimizer/src/Components/SkillTree/index.module.scss
@@ -1,6 +1,51 @@
 .content {
   position: relative;
 
+  .fixed {
+    position: fixed;
+    display: flex;
+    left: 10px;
+    top: 120px;
+    flex-wrap: wrap;
+    width: 40px;
+    height: 40px;
+    z-index: 9;
+    box-shadow: 0 0 15px #314847;
+
+    &:before {
+      content: '预览';
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 14px;
+      width: 100%;
+      height: 100%;
+      color: #fff;
+    }
+
+    span {
+      width: 20px;
+      height: 20px;
+
+      &:nth-child(1) {
+        background-color: #ae2a12;
+      }
+
+      &:nth-child(2) {
+        background-color: #f19b25;
+      }
+
+      &:nth-child(3) {
+        background-color: #0279b1;
+      }
+
+      &:nth-child(4) {
+        background-color: #71a643;
+      }
+    }
+  }
+
   .totalBox {
     position: absolute;
     z-index: 1;
@@ -77,7 +122,7 @@
     background-color: #8f4040;
     color: #fff;
     font-size: 50px;
-    
+
     &.disabled {
       background-color: #999;
     }
